# AudioRep

./: .gitattributes  .gitignore  =0.4.6  CLAUDE.md  NEXT_FUNCTIONS.md  README.md  VERSION_HISTORY.md  audiorep.spec  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/compiler-instructions/: SKILL.md
.claude/skills/github-releases-publisher/: SKILL.md
.claude/skills/ui-builder/: SKILL.md
.claude/skills/workguide/: SKILL.md
audiorep/: __main__.py
audiorep/core/: __init__.py  audio_levels.py  events.py  exceptions.py  interfaces.py  settings.py  utils.py
audiorep/domain/: __init__.py  album.py  artist.py  cd_disc.py  eq_preset.py  label.py  playlist.py  radio_station.py  track.py
audiorep/infrastructure/api/: acoustid_client.py  coverart_client.py  gnudb_client.py  lastfm_client.py  musicbrainz_client.py  radio_browser_client.py
audiorep/infrastructure/audio/: cd_reader.py  cd_ripper.py  vlc_player.py
audiorep/infrastructure/database/: __init__.py  connection.py
audiorep/infrastructure/filesystem/: __init__.py  organizer.py  (+2 more)
audiorep/services/: cd_service.py  enrichment_service.py  equalizer_service.py  export_service.py  library_service.py  player_service.py  playlist_service.py  radio_service.py  ripper_service.py  search_service.py  stats_service.py  tagger_service.py
audiorep/ui/: main_window.py
docs/: 01_arquitectura.md  02_dominio.md  03_interfaces.md  04_eventos.md  05_estructura_directorios.md  06_guia_desarrollo.md
docs/SDR Manual/: SDR Manual Downloads.txt
installers/linux/: README.txt  build_deb.sh
(+32 files in other folders)
