[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "audiorep"
version = "0.51.0"
description = "Reproductor de música local y CD con ripeo y metadatos online"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "python-vlc>=3.0.20123",
    "mutagen>=1.47.0",
    "musicbrainzngs>=0.7.1",
    "discid>=1.2.0",
    "pyacoustid>=1.3.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
audiorep = "audiorep.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiorep*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=audiorep --cov-report=term-missing"
